test/valid/Logic/Or.plume
/**
 * Class to calculate the logical OR operation
 * @author 35237, Marcos Vasco
 */
class Or extends BinaryLogicalOperation is
  
  method override calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == true || val2 == true then true
    else false