test/invalid/MissingRightParentheses/MissingRightParentheses.plume
/**
 * @author 35237, Marcos Vasco
 */
class MissingRightParentheses extends BinaryLogicalOperation is
  
  method calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if (val1 == true || val2 == false then false
    else true